# parseagle

./: .gitignore  CMakeLists.txt  LICENSE-MIT  README.md  parseagle.pro
.github/workflows/: ci.yml
parseagle/: library.cpp  library.h
parseagle/board/: board.cpp  board.h  contactref.cpp  contactref.h  designrules.cpp  designrules.h  element.cpp  element.h  param.cpp  param.h  signal.cpp  signal.h  via.cpp  via.h
parseagle/common/: attribute.cpp  attribute.h  circle.cpp  circle.h  dimension.cpp  dimension.h  domelement.cpp  domelement.h  enums.h  frame.cpp  frame.h  grid.cpp  grid.h  point.h  polygon.cpp  polygon.h  rectangle.cpp  rectangle.h  rotation.cpp  rotation.h  text.cpp  text.h  vertex.cpp  vertex.h  wire.cpp  wire.h
parseagle/deviceset/: connection.cpp  connection.h  device.cpp  device.h  deviceset.cpp  deviceset.h  gate.cpp  gate.h  technology.cpp  technology.h
parseagle/package/: hole.cpp  hole.h  package.cpp  package.h  smtpad.cpp  smtpad.h  thtpad.cpp  thtpad.h
parseagle/schematic/: bus.cpp  bus.h  instance.cpp  instance.h  label.cpp  label.h  module.cpp  module.h  net.cpp  net.h  part.cpp  part.h  pinref.cpp  pinref.h  schematic.cpp  schematic.h  segment.cpp  segment.h  sheet.cpp  sheet.h
parseagle/symbol/: pin.cpp  pin.h  symbol.cpp  symbol.h
